fix: Adds flex-wrap to pog-list style

--- a/sass/elements/_pog.scss
+++ b/sass/elements/_pog.scss
@@ -5,6 +5,7 @@ $pog_width: 150px;
 .pog-list {
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 
   .pog {
     margin-right: $pog__horizontal_margin;
